# Arduino-Temperature-Control-Library

./: .arduino-ci.yml  .gitignore  Arduino-Temperature-Control-Library.ino  CMakeLists.txt  DallasTemperature.cpp  DallasTemperature.h  Gemfile  LICENSE  README.md  arduino-cli.yaml  build.sh  keywords.txt  library.json  library.properties
.arduino_ci/: .arduino-ci.cpp
.arduino_ci/util/: crc16.h
.devcontainer/: Dockerfile  arduino-cli.yaml  devcontainer.json  update-libraries.sh
.github/workflows/: README.md  arduino-ci.yml  arduino-lint.yml  arduino_test_runner.yml  jsoncheck.yml
examples/Alarm/: Alarm.ino  Alarm.pde
examples/AlarmHandler/: AlarmHandler.ino  AlarmHandler.pde
examples/EEPROM_PID/: EEPROM_PID.ino
examples/ESP-WebServer/: ESP-WebServer.ino  README.md
examples/ExternalPullup/: ExternalPullup.ino
examples/HardwareAddressPins/: hardwareAddressPins.ino
examples/Multibus_simple/: Multibus_simple.ino
examples/Multiple/: Multiple.ino  Multiple.pde
examples/SaveRecallConfiguration/: SaveRecallConfiguration.ino
examples/SaveRecallScratchPad/: SaveRecallScratchPad.ino
examples/SetUserData/: SetUserData.ino
examples/Simple/: Simple.ino  Simple.pde
examples/Single/: Single.ino  Single.pde
examples/Tester/: Tester.ino  Tester.pde
examples/Timing/: Timing.ino
examples/TwoPin_DS18B20/: TwoPin_DS18B20.ino
mock/: inttypes.h
mock/avr/: pgmspace.h
test/: TestDallasTemperature.cpp  TestDallasTemperature.cpp.disabled  basic_test.cpp  unit_test_001.cpp  unit_test_001.cpp.disabled  unit_test_001.cpp_disabled
test-docker/: Dockerfile
(+8 files in other folders)
